# TensorRT-YOLOv4

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  buildEngine.cpp  runDet.cpp
include/: resize.h  trt.h  utils.h
model/: yolov3-tiny-prn.cfg  yolov3-tiny.cfg  yolov3.cfg  yolov4.cfg
onnx-tensorrt/: CMakeLists.txt  builtin_op_importers.cpp  builtin_plugins.cpp  darknetadd.cu  darknetadd.h  mish.cu  mish.h  onnx2trt_utils.cpp  yolo.cu  yolo.h
src/: CMakeLists.txt  resize.cu  trt.cpp
tools/: yolo_to_onnx.py
